--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
           <h2 class="h2 article-title">Blog</h2>
         </header>
 
-        <section class="blog-posts">
+        <section class="-posts">
 
           <ul class="blog-posts-list">
 
