--- a/index.html
+++ b/index.html
@@ -181,9 +181,6 @@
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Blog</button>
-          </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -718,7 +715,7 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="blog">
+<!--       <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
@@ -901,7 +898,7 @@
         </section>
 
       </article>
-
+ -->
 
 
 
