--- a/index.html
+++ b/index.html
@@ -318,8 +318,7 @@
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Mr. Nikhil Tambe</h4>
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Saurabh has done the Intenship in the Orbittals Electromech Pvt Ltd. I had a
-                    a great experience with him as he was working with us on the Project.
+                    Saurabh has done excellent work in the Internship on the project of Audio Comparison using Python.
                   </p>
                 </div>
 
@@ -518,7 +517,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">DSA in Java</h5>
-                <data value="70">70%</data>
+                <data value="90">90%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -912,14 +911,6 @@
         <header>
           <h2 class="h2 article-title">Contact</h2>
         </header>
-
-        <section class="mapbox" data-mapbox>
-          <figure>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
-              width="400" height="300" loading="lazy"></iframe>
-          </figure>
-        </section>
 
         <section class="contact-form">
 
