--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="project-1.jpg" alt="finance" loading="lazy">
+                  <img src="bus.jpg" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Full Stack Web Development</h3>
@@ -670,7 +670,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="project-2.png" alt="orizon" loading="lazy">
+                  <img src="audio.jpg" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Audio Classification </h3>
@@ -688,7 +688,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="weed.jpg" alt="fundo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Weed Plant detection</h3>
