--- a/index.html
+++ b/index.html
@@ -206,9 +206,14 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Problem Solver who loves to explore the field of interest of mine like AI, Deep Learning and other.
-            I enjoy to read books, watch movies, sketching, dancing, travelling and lot more...
-            I alos enjot turning complex problems into simple, beautiful and intuitive designs.
+            Here's an updated version without mentioning your branch:
+
+---
+
+I am a dedicated engineering student with a strong passion for coding, problem-solving, and technology. 
+Proficient in Python, I specialize in developing innovative software solutions, including projects that integrate Flask and audio processing. 
+With a focus on continuous learning and growth, I aim to apply my technical skills in top tech companies like Google or Microsoft. 
+In addition to my engineering expertise, I have a keen interest in creative arts such as sketching, video editing, and photography, which I incorporate into my technical projects.
           </p>
 
           <p>
